<resources>
    <string name="app_name">HomeTaste</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="my_recipies">My Recipies</string>
    <string name="filter">Filter</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="men_d_acc_s_r_pid_a_les_pantalles_per_tornar_aqu_clic_a_la_icona_de_retroc_s">Menú d\'accés ràpid a les pantalles, per tornar aquí clic al retrocés del sistema.</string>
    <string name="men_provisional">Menú provisional</string>
    <string name="croquetas">Croquetas</string>
    <string name="bechamel_jamoncitos">Bechamel, jamoncitos…</string>
    <string name="volver_atr_s">volver atràs</string>
    <string name="buscar">buscar</string>
    <string name="quitar">quitar</string>
    <string name="filtrar">filtrar</string>
    <string name="me_gusta">me gusta</string>
    <string name="compartir_enlace">compartir enlace</string>
    <string name="guardar_receta">guardar receta</string>
    <string name="croquetasimg">croquetasImg</string>
    <string name="croquetas_de_jam_n">Croquetas de jamón</string>
    <string name="tiempo_25_min">Tiempo: 25 min</string>
    <string name="dificultad_media">Dificultad: Media</string>
    <string name="raciones_4">Raciones: 4</string>
    <string name="categorias">Categorias:</string>
    <string name="con_ingredientes">Con ingredientes</string>
    <string name="lorena">Lorena</string>
    <string name="sin_ingredientes">Sin ingredientes</string>
    <string name="registrarse">Registrarse</string>
    <string name="registro">Registrarse</string>
    <string name="buscarsearch">Buscar…</string>
    <string name="ayudabuscador">ayudaBuscador</string>
    <string name="ayudafiltraje">ayudaFiltraje</string>
    <string name="ayudaitem">ayudaItem</string>
    <string name="ayudamenu">ayudaMenu</string>
    <string name="misrecetas">misRecetas</string>
    <string name="buscador">Buscador</string>
    <string name="home">home</string>
    <string name="iniciar">Iniciar</string>
    <string name="continuar">Continuar</string>
    <string name="contrase_a123">Contraseñ@123!</string>
    <string name="jmiguel94_gmail_com">jmiguel94@gmail.com</string>
    <string name="registrate_inicia_sesi_n_o_contin_a_como_invitado">Registrate / Inicia sesión o Continúa como invitado</string>
    <string name="bienvenido">Bienvenido!</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="inicia_sesi_n_o_registrate_para_cerar_la_cuenta">Inicia sesión o Registrate para cerar la cuenta</string>
    <string name="bienvenido_de_nuevo">Bienvenido de nuevo!</string>
    <string name="mis_recetas">Mis Recetas (0)</string>
    <string name="editar">editar</string>
    <string name="eliminar">eliminar</string>
    <string name="crearreceta">crearReceta</string>
    <string name="guardar_preferencias">Guardar preferencias</string>
    <string name="notificaciones">Notificaciones:</string>
    <string name="tama_o_de_letras">Tamaño de letras:</string>
    <string name="idioma">Idioma:</string>
    <string name="modo_nocturno">Modo nocturno:</string>
    <string name="ajustes">Ajustes</string>
    <string name="men_de_acceso_r_pido_a_las_pantallas_para_volver_aqu_clic_al_retroceso_del_sistema">Menú de acceso rápido a las pantallas, para volver aquí clic al retroceso del sistema.</string>
    <string name="imagenreceta">imagenReceta</string>
    <string name="guardar_receta_btn">Guardar receta</string>
    <string name="estad_sticas">Estadísticas</string>
</resources>