<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF9F1"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="80dp"
        android:layout_marginVertical="70dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/bienvenido_de_nuevo"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/inicia_sesi_n_o_registrate_para_cerar_la_cuenta"
            android:textSize="18sp"
            tools:ignore="TextSizeCheck" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="17dp"
                android:text="@string/jmiguel94_gmail_com"
                android:textSize="18sp"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="6dp">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="17dp"
                android:backgroundTint="@android:color/transparent"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:text="@string/jmiguel94_gmail_com"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />
        </androidx.cardview.widget.CardView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/mOrange1buttons"
            android:text="@string/iniciar_sesi_n"
            android:textStyle="bold"
            tools:ignore="VisualLintButtonSize,TextContrastCheck" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/sOrange2ContinueSign"
            android:text="@string/registro"
            android:textStyle="bold"
            android:textColor="#4A4459"
            android:onClick="goToSignUp"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>