<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuNavegacio">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/mOrange1buttons"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/home"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="95dp"
            android:clickable="true"
            android:contentDescription="@string/home"
            android:focusable="true"
            android:src="@drawable/home"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/lupa"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:clickable="true"
            android:contentDescription="@string/buscador"
            android:focusable="true"
            android:src="@drawable/lupa"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/libro"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="95dp"
            android:clickable="true"
            android:contentDescription="@string/misrecetas"
            android:focusable="true"
            android:src="@drawable/libro"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>